package com.novatech.model;

public enum Rol {

    ADMINISTRADOR,
    VENDEDOR

}
