@startuml diagrama_clases

class Cliente{
    -idCliente : int
    -nombre : String
    -apellido : String
    -edad : int
    -sexo : String
    -provincia : String
    -ciudad : String
    -fechaAlta : LocalDate
}

class Producto{
    -idProducto : int
    -nombre : String
    -marca : String
    -idCategoria : int
    -precio : double
    -stock : int
}

class Empleado{
    -idEmpleado : int
    -nombre : String
    -apellido : String
    -idSucursal : int
    -fechaIngreso : LocalDate
}

class Venta{
    -idVenta : int
    -fecha : LocalDateTime
    -medioPago : String
    -canal : String
    -descuento : double
    -total : double
}

class DetalleVenta{
    -cantidad : int
    -precioUnitario : double
    -subtotal : double
}

class Usuario{
    -idUsuario : int
    -usuario : String
    -nombre : String
    -contraseña : String
    -rol : Rol
    -activo : boolean
}

class Auditoria{
    -id : int
    -usuario : String
    -accion : String
    -modulo : String
    -fecha : LocalDateTime
}

enum Rol{
    ADMINISTRADOR
    VENDEDOR
}

note top of Producto
  "Categoria" y "Sucursal" no son clases Java propias:
  idCategoria/idSucursal se manejan como int/String
  sueltos en las consultas (no hay Categoria.java
  ni Sucursal.java en el proyecto).
end note

Cliente "1" -- "*" Venta : realiza
Empleado "1" -- "*" Venta : registra
Producto "1" -- "*" DetalleVenta : contiene
Venta "1" *-- "*" DetalleVenta : arma (en memoria; no persiste como tabla propia)
Usuario "1" -- "*" Auditoria : genera

@enduml